# minutes-agent

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.bot  README.md  devbox.json  justfile  lefthook.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
agent/: __init__.py  agent.py  app.py  runtime.py
agent/tools/: __init__.py  actions.py  discord_notify.py  gemini_client.py  minutes.py  search.py  transcribe.py
api/: __init__.py  interactions.py  landing.py  main.py  tasks.py
bot/: main.py
bot/commands/: __init__.py  actions.py  ask.py  recording.py
bot/listeners/: __init__.py
docs/: demo-video-script.md  demo-video-shooting-script.md  design.md  discord-setup.md  runbook-gcp-bootstrap.md
docs/adr/: 0001-devbox-for-dev-and-prod-environment.md  0002-split-discord-apps-for-gateway-and-interactions.md  0003-repo-glossary-distilled-at-setup-time.md  (+2 more)
infra/: artifact_registry.tf  cloud_run.tf  cloud_tasks.tf  firestore.tf  gce.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  storage.tf  terraform.tfvars.example  variables.tf  wif.tf
minutes_agent/: __init__.py  api_client.py  config.py  discord.py  discord_commands.py  firestore.py  github_glossary.py  json_utils.py  models.py  storage.py  tasks.py  workflow.py
tests/: test_api_models.py  test_bot_main.py  test_compat_wave_sink.py  test_github_glossary.py  test_interactions.py  test_json_utils.py  test_models.py  test_pr_review_fixes.py  test_pycord_sink_contract.py  test_recording_prompt.py  test_transcribe.py  test_workflow.py
(+5 files in other folders)
