[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minutes-agent"
version = "0.1.0"
description = "Discord meeting accountability agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "py-cord[voice]==2.8.0",
  "google-cloud-storage>=2.17.0",
  "google-cloud-firestore>=2.19.0",
  "google-cloud-tasks>=2.16.0",
  "google-cloud-speech>=2.27.0",
  "google-genai>=1.0.0",
  "google-adk>=1.0.0",
  "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["minutes_agent*", "api*", "agent*", "bot*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
